--- a/src/styles.css
+++ b/src/styles.css
@@ -1,64 +1,106 @@
+@import url('https://fonts.cdnfonts.com/css/roboto');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans+JP');
+
 body {
-  font-family: 'Helvetica Neue', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #F0F0F0;
-  color: #a79065;
+  background-color: #ffe8d6; /* darker blue */
+  color: #cb997e; /* light blue */
 }
 
-h1 {
-  color: #a79065;
+h1, h2, h3 {
+  color: #ffe8d6;
+  font-family: 'Roboto Black', sans-serif;
+}
+
+.en {
+  font-family: 'Roboto', sans-serif;
+  color: #ffe8d6; 
+}
+
+.jp {
+  font-family: 'Noto Sans JP', sans-serif;
+  color: #ffe8d6;
 }
 
 header {
   padding: 20px;
   text-align: center;
-  background-color: #fff;
+  background-color: #a5a58d; /* yellow */
+  color: #ffe8d6; /* darker blue */
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-  color: #a79065;
 }
 
 .navbar {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: #a79065;
-  color: white;
+  background-color: #ddbea9; /* blue */
+  color: #ffe8d6; /* darker blue */
   padding: 10px 0;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
 }
 
 .navbar a {
-  color: white;
+  color: #ffe8d6; 
   text-decoration: none;
   font-size: 1.1em;
+  font-style: italic;
 }
 
 .navbar a:hover {
-  color: #f0f0f0;
-}
-
-.navbar-list {
-  list-style: none;
+  color: #cb997e;
 }
 
 .news-card {
   margin: 20px auto;
   padding: 20px;
   width: 80%;
-  background-color: white;
+  background-color: #6b705cb0;
+  color: #ffe8d6;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.1);
   border-radius: 5px;
 }
 
 .news-card h2, a {
-  color: #a79065;
+  color: #ffe8d6;
   margin-bottom: 10px;
 }
 
 .news-card p {
-  color: #444;
+  color: #ddbea9;
   font-size: 1.1em;
+  font-style: italic;
+}
+
+.news-card button {
+  background-color: #b7b7a4;
+  color: #6b705c;
+  border: none;
+  margin-top: 1em;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.news-card button:hover {
+  background-color: #cb997e;
+  color: #ffe8d6
+}
+
+.news-card button:disabled {
+  cursor: not-allowed;
+}
+
+.page-number-button {
+  background-color: #b7b7a4;
+  color: #ffe8d6;
+  border: none;
+  margin-top: 1em;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
 @media (max-width: 768px) {
@@ -70,7 +112,7 @@ header {
 footer {
   padding: 20px;
   text-align: center;
-  background-color: #fff;
+  background-color: #a5a58d; /* yellow */
+  color: #ffe8d6; /* darker blue */
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.2);
-  color: #a79065;
 }
